@@ -1,22 +1,0 @@
-#!/bin/sh
-
-cd /home/priceweb/board18.backups
-/usr/bin/mysqldump -u priceweb -pPassword --host mysql.board18.org --single-transaction board18dev2 > board18.dev2db.txt
-nowdate=$(date +"%Y-%m-%d")
-mv board18.dev2db.txt board18.dev2db.$nowdate.txt
-echo
-echo "dev2 database backup completed."
-echo
-
-tar -zcf "board18.dev2image.tgz" ~/dev2.board18.org/images/ 
-mv board18.dev2image.tgz board18.dev2image.$nowdate.tgz
-echo
-echo "dev2 image directory backup completed."
-echo
-
-ls -l board18.dev2db.$nowdate.txt
-ls -l board18.dev2image.$nowdate.tgz
- 
-#######
-# END #
-#######
