@@ -120,7 +120,7 @@ function makeMenuItems(e) {
       break;
     default:
       menuText = "0";
-      alert("Invalid Menu Type" + mm + ".");
+      alert("Invalid Menu Type" + menuType + ".");
     } 
   return menuText;
 }
